--- a/templates/hitchhiker/index.twig
+++ b/templates/hitchhiker/index.twig
@@ -1116,10 +1116,10 @@
                                                 </div>
                                                 &nbsp;<span class="branded-page-module-title-text">Ortitle BuddyGuddy</span>
                                              </a>
-                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Chaîne recommandée pour vous</span>
+                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Recommended channel</span>
                                           </h2>
                                           <div class="menu-container">
-                                             <div class="shelf-action-container"><span class="shelf-subscription-button yt-uix-button-subscription-container"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-subscribe-branded yt-uix-button-has-icon no-icon-markup yt-can-buffer yt-uix-subscription-button" type="button" onclick=";return false;" aria-busy="false" aria-live="polite" data-style-type="branded" data-clicktracking="itct=CMEBEJsrIhMIu6v7wtiPxgIVlCi-Ch09ugDBKI4eMghob21lcGFnZQ" data-channel-external-id="UCCzktxAynHaen-XvgidYpUg"><span class="yt-uix-button-content"><span class="subscribe-label" aria-label="S&#39;abonner">S&#39;abonner</span><span class="subscribed-label" aria-label="Se désabonner">Abonnement confirmé</span><span class="unsubscribe-label" aria-label="Se désabonner">Se désabonner</span></span></button><span class="yt-subscription-button-subscriber-count-branded-horizontal" title="838" tabindex="0">838</span></span></div>
+                                             <div class="shelf-action-container"><span class="shelf-subscription-button yt-uix-button-subscription-container"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-subscribe-branded yt-uix-button-has-icon no-icon-markup yt-can-buffer yt-uix-subscription-button" type="button" onclick=";return false;" aria-busy="false" aria-live="polite" data-style-type="branded" data-clicktracking="itct=CMEBEJsrIhMIu6v7wtiPxgIVlCi-Ch09ugDBKI4eMghob21lcGFnZQ" data-channel-external-id="UCCzktxAynHaen-XvgidYpUg"><span class="yt-uix-button-content"><span class="subscribe-label" aria-label="S&#39;abonner">Subscribe</span><span class="subscribed-label" aria-label="Se désabonner">Abonnement confirmé</span><span class="unsubscribe-label" aria-label="Se désabonner">Se désabonner</span></span></button><span class="yt-subscription-button-subscriber-count-branded-horizontal" title="838" tabindex="0">838</span></span></div>
                                              <div class="yt-uix-menu-container feed-item-action-menu">
                                                 <ul class="yt-uix-menu-top-level-button-container">
                                                    <li class="yt-uix-menu-top-level-button">
@@ -2577,7 +2577,7 @@
                                                 </div>
                                                 &nbsp;<span class="branded-page-module-title-text">Phillip Nguyen</span>
                                              </a>
-                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Chaîne recommandée pour vous</span>
+                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Recommended channel</span>
                                           </h2>
                                           <div class="menu-container">
                                              <div class="shelf-action-container"><span class="shelf-subscription-button yt-uix-button-subscription-container"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-subscribe-branded yt-uix-button-has-icon no-icon-markup yt-can-buffer yt-uix-subscription-button" type="button" onclick=";return false;" aria-busy="false" aria-live="polite" data-style-type="branded" data-clicktracking="itct=CGwQmysiEwi7q_vC2I_GAhWUKL4KHT26AMEojh4yCGhvbWVwYWdl" data-channel-external-id="UCDv_fMopEM2MsrrcsGtwh5A"><span class="yt-uix-button-content"><span class="subscribe-label" aria-label="S&#39;abonner">S&#39;abonner</span><span class="subscribed-label" aria-label="Se désabonner">Abonnement confirmé</span><span class="unsubscribe-label" aria-label="Se désabonner">Se désabonner</span></span></button><span class="yt-subscription-button-subscriber-count-branded-horizontal" title="72" tabindex="0">72</span></span></div>
@@ -3365,7 +3365,7 @@
                                                 </div>
                                                 &nbsp;<span class="branded-page-module-title-text">LinksDarkArrows</span>
                                              </a>
-                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Chaîne recommandée pour vous</span>
+                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Recommended channel</span>
                                           </h2>
                                           <div class="menu-container">
                                              <div class="shelf-action-container"><span class="shelf-subscription-button yt-uix-button-subscription-container"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-subscribe-branded yt-uix-button-has-icon no-icon-markup yt-can-buffer yt-uix-subscription-button" type="button" onclick=";return false;" aria-busy="false" aria-live="polite" data-style-type="branded" data-clicktracking="itct=CDoQmysiEwi7q_vC2I_GAhWUKL4KHT26AMEojh4yCGhvbWVwYWdl" data-channel-external-id="UCvPlcHY50BJqgd0SVfhlenQ"><span class="yt-uix-button-content"><span class="subscribe-label" aria-label="S&#39;abonner">S&#39;abonner</span><span class="subscribed-label" aria-label="Se désabonner">Abonnement confirmé</span><span class="unsubscribe-label" aria-label="Se désabonner">Se désabonner</span></span></button><span class="yt-subscription-button-subscriber-count-branded-horizontal" title="3 083" tabindex="0">3 083</span></span></div>
@@ -4210,7 +4210,7 @@
                                                 </div>
                                                 &nbsp;<span class="branded-page-module-title-text">mrtyesvideo s</span>
                                              </a>
-                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Chaîne recommandée pour vous</span>
+                                             &nbsp;<span class="shelf-annotation shelf-title-annotation">Recommended channel</span>
                                           </h2>
                                           <div class="menu-container">
                                              <div class="shelf-action-container"><span class="shelf-subscription-button yt-uix-button-subscription-container"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-subscribe-branded yt-uix-button-has-icon no-icon-markup yt-can-buffer yt-uix-subscription-button" type="button" onclick=";return false;" aria-busy="false" aria-live="polite" data-style-type="branded" data-clicktracking="itct=CAgQmysiEwi7q_vC2I_GAhWUKL4KHT26AMEojh4yCGhvbWVwYWdl" data-channel-external-id="UCGejckZcpPIKxscZvESKQKA"><span class="yt-uix-button-content"><span class="subscribe-label" aria-label="S&#39;abonner">S&#39;abonner</span><span class="subscribed-label" aria-label="Se désabonner">Abonnement confirmé</span><span class="unsubscribe-label" aria-label="Se désabonner">Se désabonner</span></span></button><span class="yt-subscription-button-subscriber-count-branded-horizontal" title="1 359" tabindex="0">1 359</span></span></div>
