--- a/templates/hitchhiker/watch.twig
+++ b/templates/hitchhiker/watch.twig
@@ -572,8 +572,31 @@ Loading...
           <div class="cmt_iframe_holder" data-href="http://www.youtube.com/watch?v=dVDk7PXNXB8" data-viewtype="FILTERED" style="display: none;"></div>
 
   <div id="watch-discussion" class="yt-card branded-page-box">
-            
   
+      <div class="distiller-first-time-promo slim" id="yt-comments-dftpop">
+      <div class="content" id="yt-comments-dftpop-content">
+        <div class="arrow arrow-border"></div>
+        <div class="arrow"></div>
+        <div class="user-avatar">
+          <span class="yt-user-photo ">  
+  <span class="video-thumb  yt-thumb yt-thumb-24 g-hovercard" data-ytid="UCwDSEEyeH0KiSv7_0iNdWfA">
+    <span class="yt-thumb-square">
+      <span class="yt-thumb-clip">
+        <img src="./Fast IT  Unlocking the True Value of Cloud - YouTube_files/photo(4).jpg" alt="Milson Munakami" width="24" height="24">
+        <span class="vertical-align"></span>
+      </span>
+    </span>
+  </span>
+</span>
+        </div>
+        <div class="text">
+You publicly voted up this comment.
+        </div>
+        <button class="yt-uix-button yt-uix-button-size-default yt-uix-button-default dismiss-button" type="button" onclick="yt.www.comments.PlusOnePromo.dismiss();;return false;"><span class="yt-uix-button-content">OK </span></button>
+      </div>
+    </div>
+	
+	
   <div class="comments-iframe-container">
     <div id="comments-test-iframe"></div>
     <div id="distiller-spinner" class="action-panel-loading">
