--- a/templates/hitchhiker/components/player.twig
+++ b/templates/hitchhiker/components/player.twig
@@ -5,7 +5,7 @@
                {{ __("This video is being processed. Try again later.") }}
             </div>
             {% else %}
-            <video id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
+            <video id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}" style="widtH: 100%;height: 100%;">
 			<source src="./videos/{{ video.video_id }}.converted.mp4" type="video/mp4" />
 			<source src="./videos/{{ video.video_id }}.webm" type="video/webm" />
 			</video>
