--- a/templates/hitchhiker/watch.twig
+++ b/templates/hitchhiker/watch.twig
@@ -572,30 +572,56 @@ Loading...
           <div class="cmt_iframe_holder" data-href="http://www.youtube.com/watch?v=dVDk7PXNXB8" data-viewtype="FILTERED" style="display: none;"></div>
 
   <div id="watch-discussion" class="yt-card branded-page-box">
+  <div id="comments-view">
+  <div class="comment-section-header-renderer"><b>All Comments</b> (0)</div>
+ <div class="comment-simplebox-renderer yt-uix-servicelink" data-servicelink="itct=CAsQwXUiEwjLyZK8mrjLAhXBi34KHVP8Bicomxw">
+                                 <a>  <span class="video-thumb comment-author-thumbnail yt-thumb yt-thumb-48">
+                                 <span class="yt-thumb-square">
+                                 <span class="yt-thumb-clip">
+                                 <img alt="" height="48" role="img" width="48" tabindex="0" src="//web.archive.org/web/20160311082405im_/https://s.ytimg.com/yts/img/avatar_48-vfllY0UTT.png">
+                                 <span class="vertical-align"></span>
+                                 </span>
+                                 </span>
+                                 </span>
+                                 </a>
+                                 <div class="comment-simplebox-renderer-collapsed comment-section-renderer-redirect" data-target="https://accounts.google.com/ServiceLogin?hl=en&amp;service=youtube&amp;uilel=3&amp;continue=http%3A%2F%2Fwww.youtube.com%2Fsignin%3Fhl%3Den%26next%3D%252Fchannel%252FUC6nSFpj9HTCZ5t-N3Rm3-HA%26app%3Ddesktop%26action_handle_signin%3Dtrue&amp;passive=true">
+                                    <div class="comment-simplebox-renderer-collapsed-content">Add a public comment...</div>
+                                    <div class="comment-simplebox-arrow">
+                                       <div class="arrow-inner"></div>
+                                       <div class="arrow-outer"></div>
+                                    </div>
+                                 </div>
+                              </div>
+							  {% for comment in comments %}
+									<div class="comment-renderer" data-cid="z13oil2xpv3ce1y1g23jsduhql32crjhr04" data-author-id="114216253217092921497" data-author-name="❌ CLAIM FREE ROBUX CHECK MY CHANNEL ❌">
+                                       <a href="https://www.youtube.com/channel/UCR7fcW1_1jp_Fxuz2qz3G1w" class="yt-uix-sessionlink  g-hovercard      spf-link " data-sessionlink="itct=CIUCELZ1IhMIy8mSvJq4ywIVwYt-Ch1T_AYnKJsc" data-ytid="UCc1c098gLs67tt_T47aP72w">  <span class="video-thumb comment-author-thumbnail yt-thumb yt-thumb-48">
+                                       <span class="yt-thumb-square">
+                                       <span class="yt-thumb-clip">
+                                       <img alt="❌ CLAIM FREE ROBUX CHECK MY CHANNEL ❌" height="48" role="img" width="48" tabindex="0" src="https://yt3.ggpht.com/FyK3TZ2J5_6yTZe2ypIUjOj7zWCp-2SIBt9csdSNwsOj3nCt50tjpfwzxS2xfL7t7-6sU7g3GA=s48-c-k-c0x00ffffff-no-rj">
+                                       <span class="vertical-align"></span>
+                                       </span>
+                                       </span>
+                                       </span>
+                                       </a>
+                                       <div id="comment-renderer-edit-z13oil2xpv3ce1y1g23jsduhql32crjhr04"></div>
+                                       <div class="comment-renderer-content">
+                                          <div class="comment-renderer-header"><a href="https://www.youtube.com/channel/UCR7fcW1_1jp_Fxuz2qz3G1w" class="yt-uix-sessionlink comment-author-text g-hovercard      spf-link " data-sessionlink="itct=CIUCELZ1IhMIy8mSvJq4ywIVwYt-Ch1T_AYnKJsc" data-ytid="UCc1c098gLs67tt_T47aP72w">❌ CLAIM FREE ROBUX CHECK MY CHANNEL ❌</a><span class="comment-renderer-time" tabindex="0"><a href="https://www.youtube.com/channel/UCR7fcW1_1jp_Fxuz2qz3G1w/discussion?lc=z13oil2xpv3ce1y1g23jsduhql32crjhr04" class="yt-uix-sessionlink       spf-link " data-sessionlink="itct=CIUCELZ1IhMIy8mSvJq4ywIVwYt-Ch1T_AYnKJsc" data-ytid="UC6nSFpj9HTCZ5t-N3Rm3-HA" rel="nofollow" target="_blank">12 minutes ago</a></span></div>
+                                          <div class="comment-renderer-text" tabindex="0" role="article">
+                                             <div class="comment-renderer-text-content">It's good to see this man back</div>
+                                             <div class="comment-text-toggle hid">
+                                                <div class="comment-text-toggle-link read-more"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-link" type="button" onclick="return false;"><span class="yt-uix-button-content">Read more
+                                                   </span></button>
+                                                </div>
+                                                <div class="comment-text-toggle-link show-less hid"><button class="yt-uix-button yt-uix-button-size-default yt-uix-button-link" type="button" onclick="return false;"><span class="yt-uix-button-content">Show less
+                                                   </span></button>
+                                                </div>
+                                             </div>
+                                          </div>
+                                    </div>
+								{% endfor %}
+	</div>
   
-      <div class="distiller-first-time-promo slim" id="yt-comments-dftpop">
-      <div class="content" id="yt-comments-dftpop-content">
-        <div class="arrow arrow-border"></div>
-        <div class="arrow"></div>
-        <div class="user-avatar">
-          <span class="yt-user-photo ">  
-  <span class="video-thumb  yt-thumb yt-thumb-24 g-hovercard" data-ytid="UCwDSEEyeH0KiSv7_0iNdWfA">
-    <span class="yt-thumb-square">
-      <span class="yt-thumb-clip">
-        <img src="./Fast IT  Unlocking the True Value of Cloud - YouTube_files/photo(4).jpg" alt="Milson Munakami" width="24" height="24">
-        <span class="vertical-align"></span>
-      </span>
-    </span>
-  </span>
-</span>
-        </div>
-        <div class="text">
-You publicly voted up this comment.
-        </div>
-        <button class="yt-uix-button yt-uix-button-size-default yt-uix-button-default dismiss-button" type="button" onclick="yt.www.comments.PlusOnePromo.dismiss();;return false;"><span class="yt-uix-button-content">OK </span></button>
-      </div>
-    </div>
-	
+  </div>
 	
   <div class="comments-iframe-container">
     <div id="comments-test-iframe"></div>
