add search on sbnext (lmao)

--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -75,7 +75,7 @@
 		</div>
 		</nav>
 		<div id="billboard-search-box">
-		<form id="masthead-search" action="/results.php">
+		<form id="masthead-search" action="/search.php">
 					<button id="search-btn" class="button button-secondary">
 					<span>Search</span>
 					</button>
@@ -116,7 +116,7 @@
 					<a href="/upload_start.php">{{ __("Upload") }}</a>
 					<a href="/forum/">{{ __("Forums") }}</a>
 				</div>
-				<form id="masthead-search" action="/results.php">
+				<form id="masthead-search" action="/search.php">
 					<button id="search-btn" class="button button-secondary">
 					<span>Search</span>
 					</button>
