--- a/templates/sbnext-finalium/components/videobox.twig
+++ b/templates/sbnext-finalium/components/videobox.twig
@@ -1,4 +1,4 @@
-<div class="card" style="margin-bottom:4px">
+<div class="card" style="margin-bottom:4px;height:440px;">
 	<div class="card-body">
 		<div class="grid">
 				<div class="col-md-12">
@@ -8,12 +8,13 @@
 				</a>
 				</div>
 				<div class="col-md-12">
-				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-					<div class="col-md-2" style="padding-left:0;">
+					<h1 style="max-height: 2.2em;height:2.2em;overflow: hidden;display: block;"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h1>
+					<div class="col-md-1" style="padding-left:0;">
 					<img class="rounded img-fluid" src="{{ profile_image(data.u_name) }}"  alt="{{ data.u_name }}">
 					</div>
-					<div class="col-md-10">
-						<p style="line-height:1;margin:0;">{{ userlink(data, 'u_') }}<br> {{ data.views }} {{ __("views") }}	&bull;
+					<div class="col-md-11">
+						<h3 style="line-height:1;margin:0;">{{ userlink(data, 'u_') }}</h3>
+						<p style="line-height:1;margin:0.5em 0;">{{ data.views }} {{ __("views") }}	&bull;
 						<span class="text-muted">{{ data.time | relative_time }}</span> &bull; {{ data.category_id | category_id_to_name() }}</p>
 					</div>
 				</div>
