finally fix markdown

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1045,6 +1045,11 @@ line-height: 17px;
   }
 }
 
+.comment {
+	img {
+	width: 100%;
+	}
+}
 /// Gradients \\\
 @import "_gradients";
 /// Backgrounds \\\
